<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainscreenbackgroundblue"
    android:orientation="vertical" >
    
    <android.support.v4.view.ViewPager
        android:id="@+id/tap_image_view"
        android:layout_width="fill_parent"
        android:layout_height="347dp"
        android:layout_above="@+id/deleteButton"
        android:layout_below="@+id/moveNumbers"
        android:paddingLeft="50dp"
        android:paddingRight="50dp" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:text="@string/delete_button" />

    <TextView
        android:id="@+id/danceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/deleteButton"
        android:layout_alignParentTop="true"
        android:text="@string/dance_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/moveNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/danceName"
        android:layout_below="@+id/danceName"
        android:text="@string/move_numbers"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/moveNumbers"
        android:layout_alignTop="@+id/moveNumbers"
        android:text="@string/textview_string"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />
    
</RelativeLayout>
